backend/seed-error.log
E:\hr-enterprise\backend\node_modules\.pnpm\ts-node@10.9.2_@types+node@22.19.11_typescript@5.9.3\node_modules\ts-node\src\index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
seed-attendance.ts(65,11): error TS2353: Object literal may only specify known properties, and 'checkInTime' does not exist in type 'Without<AttendanceCreateInput, AttendanceUncheckedCreateInput> & AttendanceUncheckedCreateInput'.

    at createTSError (E:\hr-enterprise\backend\node_modules\.pnpm\ts-node@10.9.2_@types+node@22.19.11_typescript@5.9.3\node_modules\ts-node\src\index.ts:859:12)
    at reportTSError (E:\hr-enterprise\backend\node_modules\.pnpm\ts-node@10.9.2_@types+node@22.19.11_typescript@5.9.3\node_modules\ts-node\src\index.ts:863:19)
    at getOutput (E:\hr-enterprise\backend\node_modules\.pnpm\ts-node@10.9.2_@types+node@22.19.11_typescript@5.9.3\node_modules\ts-node\src\index.ts:1077:36)
    at Object.compile (E:\hr-enterprise\backend\node_modules\.pnpm\ts-node@10.9.2_@types+node@22.19.11_typescript@5.9.3\node_modules\ts-node\src\index.ts:1433:41)
    at Module.m._compile (E:\hr-enterprise\backend\node_modules\.pnpm\ts-node@10.9.2_@types+node@22.19.11_typescript@5.9.3\node_modules\ts-node\src\index.ts:1617:30)
    at node:internal/modules/cjs/loader:1708:10
    at Object.require.extensions.<computed> [as .ts] (E:\hr-enterprise\backend\node_modules\.pnpm\ts-node@10.9.2_@types+node@22.19.11_typescript@5.9.3\node_modules\ts-node\src\index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1318:32)
    at Function._load (node:internal/modules/cjs/loader:1128:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2353 ]
}
